[package]
name = "rust-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19.3"
yew-router = "^0.16"
yew-feather = "0.2.1"
yewstrap = { path = "./yewstrap" }
wasm-bindgen = "0.2.83"

weblog = "0.3.0"
